--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(galaxy.webp.url);
+    background-image: url(galaxy.webp);
     background-size: cover;
     color: white;
     text-align: center;
