--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
 body {
+    margin: 0;
+    color: #82a5ca;
+    text-align: center;
+    font-family: 'Orbitron','sans-serif';
+}
+
+#hero {
     background-image: url(galaxy.webp);
     background-size: cover;
-    color: white;
-    text-align: center;
+    padding: 10px 0 40px 0 ;
     font-family: 'Orbitron', sans-serif;
 }
 
@@ -11,9 +17,19 @@ body {
     height: 20px;
 }
 
+#title {
+    text-shadow: 0px 0px 4px black;
+}
+
 .btn {
     padding: 6px 12px;
     background: white;
     border: none;
-    font-family: inherit;
+    font-family: 'Orbitron', sans-serif;
+    color: #82a5ca;
+    font-weight: bold;
+}
+
+.underline {
+    border-bottom: 4px solid white;
 }
